favor use of properties over attributes

--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -48,7 +48,7 @@ export default authMiddleware({
 
 ## `afterSignInUrl` and `afterSignUpUrl` props
 
-You can explicitly define the redirect paths by passing the `afterSignInUrl` and `afterSignUpUrl` props to the respective components.
+You can explicitly define the redirect paths by passing the `afterSignInUrl` and `afterSignUpUrl` properties to the respective components.
 
 ### Control components
 <CodeBlockTabs options={['ClerkProvider', 'RedirectToSignIn', 'RedirectToSignUp']}>
@@ -103,7 +103,7 @@ function App() {
 
 ### Button components
 
-In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/sign-in-button) or [`<SignUpButton />`](/docs/components/unstyled/sign-up-button), you can also pass the props into those components. We recommend defining both `afterSignInUrl` and `afterSignUpUrl` redirects in each button as some users may choose to sign up instead after attempting to sign in.
+In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/sign-in-button) or [`<SignUpButton />`](/docs/components/unstyled/sign-up-button), you can also pass the properties into those components. We recommend defining both `afterSignInUrl` and `afterSignUpUrl` redirects in each button as some users may choose to sign up instead after attempting to sign in.
 
 <CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
   ```jsx filename="pages/index.js"
