--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -93,7 +93,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
   </Tab>  
 </Tabs>
 
-## Props
+## Properties
 
 All props below are optional.
 
