--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -94,7 +94,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
   </Tab>
 </Tabs>
 
-## Props
+## Properties
 
 All props below are optional.
 
