--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -89,7 +89,7 @@ ReactDOM.render(
 {/* TODO: Make dedicated docs pages for these meta-frameworks */}
 > Other meta-frameworks, like [Remix](/docs/quickstarts/remix#configure-clerk-app) and [Gatsby](/docs/quickstarts/gatsby#update-gatsby-config-ts), have wrappers around `<ClerkProvider />` to make their integrations tighter.
 
-## Props
+## Properties
 
 | Name                      | Type                                                                                  | Description                                                                                                                                                                                                                |
 | ------------------------- | ------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
