--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -60,7 +60,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
   </Tab>
 </Tabs>
 
-## Props
+## Properties
 
 All props below are optional.
 
