--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -64,7 +64,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
   </Tab>
 </Tabs>
 
-## Props
+## Properties
 
 All props below are optional.
 
