--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -75,7 +75,7 @@ The [`<OrganizationSwitcher />`][orgswitcher-ref] component is used to enable th
 </Tabs>
 
 
-## Props
+## Properties
 
 All props below are optional.
 
