--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -179,7 +179,7 @@ You can create a custom button by wrapping your own button, or button text, in t
   </Tab>
 </Tabs>
 
-## Props
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
