--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -192,7 +192,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
   </Tab>
 </Tabs>
 
-## Props
+## Properties
 
 All props below are optional.
 
