--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -68,7 +68,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
 </Tabs>
 
 
-## Props
+## Properties
 
 All props below are optional.
 
