--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -7,12 +7,12 @@ description: Set up a new Clerk account and integrate it into a new application.
 
 Set up a new Clerk account and integrate it into a new application.
 
-<details>
-  <summary>Migrating from another platform?</summary>
+<Callout type="info">
+  Migrating from another platform?
 
   You might want to [check out one of our migration guides](/docs/deployments/migrate-overview) to help
   you move your data to Clerk.
-</details>
+</Callout>
 
 Creating a Clerk account and using it in your apps can be done in three steps:
 
