--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -37,7 +37,7 @@ Create an instance of the `Clerk` class with dedicated options.
 
 > This method is only available when importing `Clerk` from `@clerk/clerk-js`, rather than using a Window script.
 
-#### Props
+#### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
