--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -16,7 +16,7 @@ function getOrganization(organizationId: string): Promise<Organization | undefin
 The `getOrganization` method is used to get the information of an organization programatically.
 
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -36,7 +36,7 @@ function createOrganization({name, slug}: CreateOrganizationParams): Promise<Org
 
 The `createOrganization` method is used to create an organization programatically.
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
