--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -62,7 +62,7 @@ Render the [`<OrganizationProfile />`][orgprofile-ref] component to an HTML `<di
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProfileProps): void;
@@ -126,7 +126,7 @@ Unmount and run cleanup on an existing [`<OrganizationProfile />`][orgprofile-re
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function unmountOrganizationProfile(node: HTMLDivElement): void;
@@ -178,7 +178,7 @@ Opens the [`<OrganizationProfile />`][orgprofile-ref] component as an overlay at
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function openOrganizationProfile(props?: OrganizationProfileProps): void;
@@ -230,7 +230,7 @@ Closes the organization profile overlay.
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function closeOrganizationProfile(): void;
