--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -62,7 +62,7 @@ Render the [`<OrganizationSwitcher />`][orgswitcher-ref] component to an HTML `<
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function mountOrganizationSwitcher(node: HTMLDivElement, props?: OrganizationSwitcherProps): void;
@@ -126,7 +126,7 @@ Unmount and run cleanup on an existing [`<OrganizationSwitcher />`][orgswitcher-
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function unmountOrganizationSwitcher(node: HTMLDivElement): void;
