--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -30,7 +30,7 @@ If an active session already exists, it will be replaced with the new one. The c
 2. The `beforeEmit` callback is executed. If a `Promise` is returned, Clerk waits for the `Promise` to resolve.
 3. The current [`Session`][session-ref] is set to the passed `session`. This causes the control components to render their children again.
 
-### Props
+### Properties
 
 
 | Name | Type | Description |
