--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -64,7 +64,7 @@ Render the [`<SignUp />`][signup-ref] component to an HTML `<div>` element.
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
@@ -128,7 +128,7 @@ Unmount and run cleanup on an existing [`<SignUp />`][signup-ref] component inst
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function unmountSignUp(node: HTMLDivElement): void;
@@ -180,7 +180,7 @@ Opens the [`<SignUp />`][signup-ref] component as an overlay at the root of your
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function openSignUp(props?: SignUpProps): void;
@@ -232,7 +232,7 @@ Closes the sign up overlay.
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function closeSignUp(): void;
