--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -62,7 +62,7 @@ Render the [`<UserButton />`][userbutton-ref] component to an HTML `<div>` eleme
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
@@ -126,7 +126,7 @@ Unmount and run cleanup on an existing [`<UserButton />`][userbutton-ref] compon
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function unmountUserButton(node: HTMLDivElement): void;
