--- a/docs/references/javascript/email-address/email-address.mdx
+++ b/docs/references/javascript/email-address/email-address.mdx
@@ -13,7 +13,7 @@ The verification process always starts with the [`EmailAddress.prepareVerificati
 
 Finally, email addresses can be linked to other identifications.
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 |  --- | --- | --- |
