--- a/docs/references/javascript/organization-invitation.mdx
+++ b/docs/references/javascript/organization-invitation.mdx
@@ -7,7 +7,7 @@ description: The OrganizationInvitation object is the model around an organizati
 
 The `OrganizationInvitation` object is the model around an organization invitation.
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 |  --- | --- | --- |
