--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -86,7 +86,7 @@ function removeMember(userId: string): Promise<OrganizationMembership>;
 
 Removes a member from the organization based on the `userId`.
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
