--- a/docs/references/javascript/sign-in/sign-in.mdx
+++ b/docs/references/javascript/sign-in/sign-in.mdx
@@ -17,7 +17,7 @@ The `SignIn` object's properties can be split into logical groups, with each gro
 - Information about the current sign in status in general and which authentication identifiers, authentication methods and verifications are supported.
 - Information about the user and the provided authentication identifier value (email address, phone number or username).Information about each verification, either the first factor (logging in) or the second factor (2FA).
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
