--- a/docs/references/javascript/sign-up/sign-up.mdx
+++ b/docs/references/javascript/sign-up/sign-up.mdx
@@ -20,7 +20,7 @@ Also, the attributes of the `SignUp` object can basically be grouped into three 
 - Those that hold the different values that we supply to the sign-up. Examples of these are `username`, `emailAddress`, `firstName`, etc.
 - Those that contain references to the created resources once the sign-up is complete, i.e. `createdSessionId` and `createdUserId`.
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
