--- a/docs/references/javascript/types/paginated-response.mdx
+++ b/docs/references/javascript/types/paginated-response.mdx
@@ -7,7 +7,7 @@ description: An interface that describes the response of a method that returns a
 
 An interface that describes the response of a method that returns a paginated list of resources.
 
-## Attributes
+## Properties
 
 | Properties | Type | Description |
 | --- | --- | --- |
