--- a/docs/references/javascript/types/public-user-data.mdx
+++ b/docs/references/javascript/types/public-user-data.mdx
@@ -7,7 +7,7 @@ description: Information about that user that's publicly available.
 
 Information about the user that's publicly available.
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
