--- a/docs/references/javascript/types/sign-up-redirect-options.mdx
+++ b/docs/references/javascript/types/sign-up-redirect-options.mdx
@@ -7,7 +7,7 @@ description: An interface that provides options for sign-up redirect methods.
 
 An interface that provides options for sign-up redirect methods.
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
