--- a/docs/references/javascript/web3-wallet/web3-wallet.mdx
+++ b/docs/references/javascript/web3-wallet/web3-wallet.mdx
@@ -13,7 +13,7 @@ The verification process always starts with the [`Web3Wallet.prepareVerification
 
 The second and final step involves an attempt to complete the verification by calling [`Web3Wallet.attemptVerification()`](/docs/references/javascript/web3-wallet/verification#attempt-verification) method, passing the generated signature as a parameter.
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
