--- a/docs/references/nextjs/authentication-object.mdx
+++ b/docs/references/nextjs/authentication-object.mdx
@@ -5,7 +5,7 @@ description: The Authentication object contains information about the current us
 
 # `Authentication` Object
 
-## Props
+## Properties
 
 | Name | Description |
 | --- | --- |
