--- a/docs/references/remix/clerk-app.mdx
+++ b/docs/references/remix/clerk-app.mdx
@@ -55,7 +55,7 @@ function App() {
 export default ClerkApp(App);
 ```
 
-## Props
+## Properties
 
 `<ClerkApp>` supports [all of the same properties as `<ClerkProvider>`](/docs/components/clerk-provider#props) with the exception of the `navigate` property:
 
