--- a/docs/references/remix/clerk-catch-boundary.mdx
+++ b/docs/references/remix/clerk-catch-boundary.mdx
@@ -65,7 +65,7 @@ If you need to add a custom boundary to your application you can pass it as an a
 export const CatchBoundary = ClerkCatchBoundary(YourBoundary);
 ```
 
-## Props
+## Properties
 
 
 <Tables
