--- a/docs/components/control/redirect-to-signin.mdx
+++ b/docs/components/control/redirect-to-signin.mdx
@@ -88,7 +88,7 @@ export default function Index() {
 </Tab>
 </Tabs>
 
-## Props
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
