--- a/docs/components/control/redirect-to-signup.mdx
+++ b/docs/components/control/redirect-to-signup.mdx
@@ -89,7 +89,7 @@ export default function Index() {
 </Tab>
 </Tabs>
 
-## Props
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
