--- a/docs/components/unstyled/sign-in-button.mdx
+++ b/docs/components/unstyled/sign-in-button.mdx
@@ -131,7 +131,7 @@ In some cases you will want to use your own button, or button text. You can do t
   ```
 </CodeBlockTabs>
 
-## Props
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
