--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -139,7 +139,7 @@ In some cases you will want to use your own button, or button text. You can do t
   ```
 </CodeBlockTabs>
 
-## Props
+## Properties
 
 
 | Name | Type | Description |
