--- a/docs/references/javascript/clerk/build-urls.mdx
+++ b/docs/references/javascript/clerk/build-urls.mdx
@@ -15,7 +15,7 @@ function buildUrlWithAuth(to: string, options?: BuildUrlWithAuthParams): string;
 
 Decorates the provided url with the auth token for development instances.
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -42,7 +42,7 @@ function buildSignInUrl(options?: RedirectOptions): string;
 
 Returns the configured url where [`SignIn`](/docs/references/javascript/clerk/sign-in) is mounted or a custom sign-in page is rendered.
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -62,7 +62,7 @@ function buildSignUpUrl(options?: RedirectOptions): string;
 
 Returns the configured url where <code><a href="/docs/references/javascript/clerk/sign-up">SignUp</a></code> is mounted or a custom sign-up page is rendered.
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
