--- a/docs/references/javascript/clerk/create-organization.mdx
+++ b/docs/references/javascript/clerk/create-organization.mdx
@@ -62,7 +62,7 @@ Render the [`<CreateOrganization />`][createorg-ref] component to an HTML `<div>
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizationProps): void;
@@ -126,7 +126,7 @@ Unmount and run cleanup on an existing [`<CreateOrganization />`][createorg-ref]
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function unmountCreateOrganization(node: HTMLDivElement): void;
@@ -178,7 +178,7 @@ Opens the [`<CreateOrganization />`][createorg-ref] component as an overlay at t
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function openCreateOrganization(props?: CreateOrganizationProps): void;
@@ -230,7 +230,7 @@ Closes the organization profile overlay.
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function closeCreateOrganization(): void;
