--- a/docs/references/javascript/clerk/handle-navigation.mdx
+++ b/docs/references/javascript/clerk/handle-navigation.mdx
@@ -36,7 +36,7 @@ In case the magic link verification wasn't successful, the `handleMagicLinkVerif
 
 Take a look at the function parameters description below for more usage details.
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -68,7 +68,7 @@ function handleRedirectCallback(
 
 Completes a custom OAuth flow started by calling either [`SignIn.authenticateWithRedirect(params)`](/docs/references/javascript/clerk/sign-in) or [`SignUp.authenticateWithRedirect(params)`](/docs/references/javascript/clerk/sign-up)
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
