--- a/docs/references/javascript/clerk/redirect-methods.mdx
+++ b/docs/references/javascript/clerk/redirect-methods.mdx
@@ -15,7 +15,7 @@ function navigate(to: string | undefined): Promise<unknown>;
 
 Helper method which will use the custom push navigation function of your application to navigate to the provided URL or relative path. See the relevant section on routing for more information on navigation.
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -36,7 +36,7 @@ function redirectWithAuth(to: string): Promise<unknown>;
 Redirects to the provided url after decorating it with the auth token for development instances.
 
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -57,7 +57,7 @@ function redirectToSignIn(options?: SignInRedirectOptions): Promise<unknown>;
 Redirects to the sign-in URL, as configured in your application's instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
 
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -77,7 +77,7 @@ function redirectToSignUp(options?: SignUpRedirectOptions): Promise<unknown>;
 
 Redirects to the sign-up URL, as configured in your application's instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
 
-### Props
+### Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
