--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -64,7 +64,7 @@ Render the [`<SignIn />`][signin-ref] component to an HTML `<div>` element.
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
@@ -128,7 +128,7 @@ Unmount and run cleanup on an existing [`<SignIn />`][signin-ref] component inst
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function unmountSignIn(node: HTMLDivElement): void;
@@ -180,7 +180,7 @@ Opens the `<SignIn />` component as an overlay at the root of your HTML `body` e
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function openSignIn(props?: SignInProps): void;
@@ -232,7 +232,7 @@ Closes the sign in overlay.
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function closeSignIn(): void;
