--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -62,7 +62,7 @@ Render the [`<UserProfile />`][userprofile-ref] component to an HTML `<div>` ele
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
@@ -126,7 +126,7 @@ Unmount and run cleanup on an existing [`<UserProfile />`][userprofile-ref] comp
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function unmountUserProfile(node: HTMLDivElement): void;
@@ -178,7 +178,7 @@ Opens the [`<UserProfile />`][userprofile-ref] component as an overlay at the ro
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function openUserProfile(props?: UserProfileProps): void;
@@ -230,7 +230,7 @@ Closes the user profile overlay.
   ```
 </CodeBlockTabs>
 
-### Props
+### Properties
 
 ```typescript
 function closeUserProfile(): void;
