--- a/docs/references/javascript/organization-membership.mdx
+++ b/docs/references/javascript/organization-membership.mdx
@@ -7,7 +7,7 @@ description: The OrganizationMembership object is the model around an organizati
 
 The `OrganizationMembership` object is the model around an organization membership entity and describes the relationship between users and organizations.
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
