--- a/docs/references/javascript/phone-number/phone-number.mdx
+++ b/docs/references/javascript/phone-number/phone-number.mdx
@@ -13,7 +13,7 @@ The verification process always starts with the [`PhoneNumber.prepareVerificatio
 
 Finally, phone numbers are used as part of [multi-factor authentication](/docs/custom-flows/mfa). Users receive an SMS message with a one-time code that they need to provide as an extra verification step.
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
