--- a/docs/references/javascript/types/sign-up-initial-values.mdx
+++ b/docs/references/javascript/types/sign-up-initial-values.mdx
@@ -7,7 +7,7 @@ description: The type for the `initialValues` prop that is used to pre-populate 
 
 The type for the `initialValues` prop that is used to pre-populate the sign-up form.
 
-## Attributes
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
