DOCS-434 remove links to outdated FAPI reference (#401)

--- a/docs/organizations/metadata.mdx
+++ b/docs/organizations/metadata.mdx
@@ -16,7 +16,7 @@ Metadata allows for custom data to be saved on the `Organization` and `Organizat
     Metadata is limited to **8kb** maximum.
 </Callout>
 
-Both public and private metadata are set from the [Backend API](https://clerk.com/docs/reference/backend-api), but public metadata can be accessed from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference) and [Backend API](https://clerk.com/docs/reference/backend-api). These types of metadata can be used to access non-sensitive information about an organization, such as their profile picture or their name. They can be used to build UIs where an organization might not be signed in, but you still want to show some of their profile info.
+Both public and private metadata are set from the [Backend API](https://clerk.com/docs/reference/backend-api), but public metadata can be accessed from the Frontend API and [Backend API](https://clerk.com/docs/reference/backend-api). These types of metadata can be used to access non-sensitive information about an organization, such as their profile picture or their name. They can be used to build UIs where an organization might not be signed in, but you still want to show some of their profile info.
 
 The `publicMetadata` property should be used if you need to set some metadata from your backend and have them displayed as read-only on the frontend.
 
