add Tabs  for overall doc and nest code blocks

--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -9,86 +9,90 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
 
 ## Usage
 
-### Next.js
-<CodeBlockTabs options={["Page Router", "App Router"]}>
-  ```tsx filename="pages/index.tsx"
-  import { useAuth } from '@clerk/nextjs';
+<Tabs items={['Next.js', 'React']}>
+  <Tab>
+    ### Next.js
+    <CodeBlockTabs options={["App Router", "Page Router"]}>
+      ```tsx filename="/app/pageWithData/clientComponent.tsx"
+      "use client";
+      import { useAuth } from '@clerk/nextjs';
 
-  export default function ExternalDataPage() {
-    const { getToken, isLoaded, isSignedIn } = useAuth();
+      export default function ExternalDataPage() {
+        const [data, setData] = useState<object>({});
+        const { getToken, isLoaded, isSignedIn } = useAuth();
 
-    if (!isLoaded || !isSignedIn) {
-      // You can handle the loading or signed state separately
-      return null;
-    }
+        // Fetch data from a Next.js API route handler
+        useEffect(() => {
+          if (!isLoaded || !isSignedIn) {
+            // You can handle the loading or signed state separately
+            return;
+          }
 
-    const fetchDataFromExternalResource = async () => {
-      const token = await getToken();
-      // fetch your data
-      return data;
-    };
+          // Fetch data without async/await since this is a client component
+          getToken()
+          .then((token) =>
+          fetch('/api/protectedNextRoute', {
+            headers: {Authentication: `Bearer ${token}`}
+          }))
+          .then(response => response.json())
+                .then(data => {
+                  setData(data.data)
+                });
+        }, []);
 
-    return <div>...</div>;
-  }
-
-  ```
-
-  ```tsx filename="/app/pageWithData/clientComponent.tsx"
-  "use client";
-  import { useAuth } from '@clerk/nextjs';
-
-  export default function ExternalDataPage() {
-    const [data, setData] = useState<object>({});
-    const { getToken, isLoaded, isSignedIn } = useAuth();
-
-    // Fetch data from a Next.js API route handler
-    useEffect(() => {
-      if (!isLoaded || !isSignedIn) {
-        // You can handle the loading or signed state separately
-        return;
+        return <div>...</div>;
       }
+      ```
 
-      // Fetch data without async/await since this is a client component
-      getToken()
-      .then((token) =>
-      fetch('/api/protectedNextRoute', {
-        headers: {Authentication: `Bearer ${token}`}
-      }))
-      .then(response => response.json())
-            .then(data => {
-              setData(data.data)
-            });
-    }, []);
+      ```tsx filename="pages/index.tsx"
+      import { useAuth } from '@clerk/nextjs';
 
-    return <div>...</div>;
-  }
-  ```
-</CodeBlockTabs>
+      export default function ExternalDataPage() {
+        const { getToken, isLoaded, isSignedIn } = useAuth();
 
-### React
-<CodeBlockTabs>
-  ```tsx filename="external-data-page.tsx"
-  import { useAuth } from '@clerk/clerk-react';
+        if (!isLoaded || !isSignedIn) {
+          // You can handle the loading or signed state separately
+          return null;
+        }
 
-  export default function ExternalDataPage() {
-    const { getToken, isLoaded, isSignedIn } = useAuth();
+        const fetchDataFromExternalResource = async () => {
+          const token = await getToken();
+          // fetch your data
+          return data;
+        };
 
-    if (!isLoaded || !isSignedIn) {
-      // You can handle the loading or signed state separately
-      return null;
-    }
+        return <div>...</div>;
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-    const fetchDataFromExternalResource = async () => {
-      const token = await getToken();
-      // fetch your data
-      return data;
-    }
+  <Tab>
+    ### React
+    <CodeBlockTabs>
+      ```tsx filename="external-data-page.tsx"
+      import { useAuth } from '@clerk/clerk-react';
 
-    return <div>...</div>;
-  }
+      export default function ExternalDataPage() {
+        const { getToken, isLoaded, isSignedIn } = useAuth();
 
-  ```
-</CodeBlockTabs>
+        if (!isLoaded || !isSignedIn) {
+          // You can handle the loading or signed state separately
+          return null;
+        }
+
+        const fetchDataFromExternalResource = async () => {
+          const token = await getToken();
+          // fetch your data
+          return data;
+        }
+
+        return <div>...</div>;
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
+</Tabs>
 
 ## Returns
 
