Added status information to both hooks

--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -175,3 +175,12 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 | `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
 | `setSession()` | A function that sets the active session. |
 | `signIn` | An object that contains the current sign-in attempt status and methods to create a new sign-in attempt. |
+
+### Result Status
+
+| Values | Descriptiom |
+| --- | --- |
+| `complete` | User has been signed in and custom flow can proceed to `setActive()` to create session. |
+| `needs_factor_one` | The First Factor verification is missing. One of `email_link`, `email_code`, `phone_code`, `web3_metamask_signature` or `oauth_provider` is required to verify user. See [First Factor](/docs/references/javascript/sign-in/first-factor) for details. |
+| `needs_factor_two` | The Second Factor verification is missing. The Second Factor is a optional step to provide additional verification and includes `phone_code` and `totp`. See [Second Factor](/docs/references/javascript/sign-in/second-factor) for details.|
+| `needs_identifier` | The unqiue identifier for the user was missing. | 
