`feat: Introduce Organization Domains (last pr feeback)

--- a/docs/references/javascript/organization/domains.mdx
+++ b/docs/references/javascript/organization/domains.mdx
@@ -5,7 +5,7 @@ description: These are all methods on the Organization class that allow you to m
 
 # Organization Domains
 
-These are all methods on [the Organization class](/docs/references/javascript/organization/organization) that allow you to manage the domains of an organization.
+These are all methods on the [Organization](/docs/references/javascript/organization/organization) class that allow you to manage the domains of an organization.
 
 ## `getDomains()`
 
@@ -20,7 +20,7 @@ function getDomains(params?: GetDomainsParams): Promise<PaginatedResources<Organ
 | Name | Type | Description |
 | --- | --- | --- |
 | `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
-| `pageSize?` | `number | A number that indicates the maximum number of results that should be returned for a specific page. |
+| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
 | `enrollmentMode?` | `'manual_invitation' \| 'automatic_invitation' \| 'automatic_suggestion'` | An [enrollment mode][enrollment-mode-ref] will change how new users join an organization. |
 
 ### Returns
