--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -5,7 +5,7 @@ description: These are all methods on the Organization class that allow you to m
 
 # Organization Invitations
 
-These are all methods on [the Organization class](/docs/references/javascript/organization/organization) that allow you to manage the invitations to an organization.
+These are all methods on the [Organization](/docs/references/javascript/organization/organization) class that allow you to manage the invitations to an organization.
 
 ## `getInvitations()`
 
@@ -27,18 +27,16 @@ function getInvitations(params?: GetInvitationsParams): Promise<PaginatedResourc
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationInvitation][org-inv-ref]\>></code> | This method returns a `Promise` which resolves with a list of [`OrganizationInvitation`][org-inv-ref] objects. |
+| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationInvitation][orginv-ref]\>></code> | This method returns a `Promise` which resolves with a list of [`OrganizationInvitation`][orginv-ref] objects. |
 
 
 ## `getPendingInvitations()` (deprecated)
 
-Retrieves a list of invitations for the currently active organization.
+Retrieves a list of organization invitations that have not yet been accepted. This method is deprecated in favor of [`getInvitations()`](#get-invitations).
 
 ```typescript
 function getPendingInvitations(params?: GetPendingInvitationsParams): Promise<OrganizationInvitation[]>;
 ```
-
-Retrieves a list of organization invitations that have not yet been accepted.
 
 ### `GetPendingInvitationsParams`
 
@@ -55,11 +53,11 @@ Retrieves a list of organization invitations that have not yet been accepted.
 
 ## `inviteMember()`
 
+Creates and sends an invitation to the target email address for becoming a member with the role passed on the function parameters.
+
 ```typescript
 function inviteMember(params: InviteMemberParams): Promise<OrganizationInvitation>;
 ```
-
-Creates and sends an invitation to the target email address for becoming a member with the role passed on the function parameters.
 
 ### `InviteMemberParams`
 
@@ -76,11 +74,11 @@ Creates and sends an invitation to the target email address for becoming a membe
 
 ## `inviteMembers()`
 
+Creates and sends an invitation to the target email addresses for becoming a member with the role passed on the function parameters.
+
 ```typescript
 function inviteMembers(params: InviteMembersParams): Promise<OrganizationInvitation[]>;
 ```
-
-Creates and sends an invitation to the target email addresses for becoming a member with the role passed on the function parameters.
 
 ### `InviteMembersParams`
 
@@ -96,3 +94,4 @@ Creates and sends an invitation to the target email addresses for becoming a mem
 | <code>Promise\<[OrganizationInvitation][orginv-ref][]\></code> | This method returns a `Promise` which resolves to a list of [`OrganizationInvitation`][orginv-ref]s for the created invitations. |
 
 [orginv-ref]: /docs/references/javascript/organization-invitation
+[pag-res-ref]: /docs/references/javascript/types/paginated-response
