--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -5,7 +5,7 @@ description: These are all methods on the Organization class that allow you to m
 
 # Organization Members
 
-These are all methods on [the Organization class](/docs/references/javascript/organization/organization) that allow you to manage the members of an organization.
+These are all methods on the [Organization](/docs/references/javascript/organization/organization) class that allow you to manage the members of an organization.
 
 ## `getMemberships()`
 
