--- a/docs/references/javascript/organization-domain.mdx
+++ b/docs/references/javascript/organization-domain.mdx
@@ -45,11 +45,11 @@ function delete: () => Promise<void>;
 
 ## `prepareAffiliationVerification()`
 
+Begins the verification process of a created organization domain. This is a required step in order to complete the registration of the domain under the organization.
+
 ```typescript
 function prepareAffiliationVerification(params: PrepareAffiliationVerificationParams): Promise<OrganizationDomain>;
 ```
-
-Begins the verification process of a created organization domain. This is a required step in order to complete the registration of the domain under the organization.
 
 ### `PrepareAffiliationVerificationParams`
 
@@ -66,13 +66,13 @@ Begins the verification process of a created organization domain. This is a requ
 
 ## `attemptAffiliationVerification()`
 
+Attempts to complete the domain verification process. This is a required step in order to complete the registration of a domain under an organization, as the administrator should be verified as a person who is affiliated with that domain.
+
+Make sure that an `OrganizationDomain` object already exists before you call this method, by first calling [`OrganizationDomain.prepareAffiliationVerification`](#prepare-affiliation-verification).
+
 ```typescript
 function attemptAffiliationVerification(params: AttemptAffiliationVerificationParams): Promise<OrganizationDomain>;
 ```
-
-Attempts to complete the domain verification process. This is a required step in order to complete the registration of a domain under an organization, as the administrator should be verified as a person who is affiliated with that domain.
-
-Make sure that an `OrganizationDomain` object already exists before you call this method, by first calling `OrganizationDomain.prepareAffiliationVerification`.
 
 ### `AttemptAffiliationVerificationParams`
 
