Add UserProfile custom pages docs

--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -246,7 +246,10 @@ All props below are optional.
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
 | `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/user-profile`.<br />This prop is ignored in hash-based routing. |
 | `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved.<br/>e.g. `{google: ['foo', 'bar'], github: ['qux']}` |
+| `customPages` | <code>[CustomPage][custompage-ref]\[\]</code> | An array of custom pages to add to the user profile. |
 
 [userprofile-ref]: /docs/components/user/user-profile
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
+[custompage-ref]: /docs/references/javascript/types/custom-page
+
