Fix usage of ">"

--- a/docs/references/javascript/types/custom-page.mdx
+++ b/docs/references/javascript/types/custom-page.mdx
@@ -25,22 +25,22 @@ Custom page for UserProfile or OrganizationProfile.
             ]},
         {cells: [
                 <code>mountIcon</code>,
-                <code>((el: [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement)) => void) | undefined</code>,
+                <code>((el: [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement)) ={">"} void) | undefined</code>,
                 "This function is called to mount the icon of the label. The `el` argument is the element where the icon should be mounted."
             ]},
         {cells: [
                 <code>unmountIcon</code>,
-                <code>((el?: [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement)) => void) | undefined</code>,
+                <code>((el?: [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement)) ={">"} void) | undefined</code>,
                 "This function is called to unmount the icon of the label. The `el` argument is the same element that was passed to the `mountIcon` function."
             ]},
         {cells: [
                 <code>mount</code>,
-                <code>((el: [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement)) => void) | undefined</code>,
+                <code>((el: [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement)) ={">"} void) | undefined</code>,
                 "This function is called to mount the content of the custom page. The `el` argument is the element where the content should be mounted."
             ]},
         {cells: [
                 <code>unmount</code>,
-                <code>((el?: [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement)) => void) | undefined</code>,
+                <code>((el?: [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement)) ={">"} void) | undefined</code>,
                 "This function is called to unmount the content of the custom page. The `el` argument is the same element that was passed to the `mount` function."
             ]},
     ]}
